--- a/src/public/css/index.scss
+++ b/src/public/css/index.scss
@@ -1,14 +1,105 @@
 @charset "UTF-8";
 
-.item-section{
-  min-width:100%;
-  .home_headimg{
+.left{
+  float: left;
+}
+.right{
+  float: right;
+}
+//
+//@mixin font-dpr($font-size) {
+//  //font-size: $font-size;
+//  [data-dpr="2"]  {
+//    font-size: $font-size * 2;
+//  }
+//  [data-dpr="3"]  {
+//    font-size: $font-size * 3;
+//  }
+//}
+//@include font-dpr(16px);
+
+
+.home_headimg{
+  position: relative;
+  width:10rem;
+  text-align: center;
+  height: 6.18rem;
+  overflow: hidden;
+  margin:0 auto;
+  .bg {
+    position: absolute;
+    left: 0;
+    top: 0;
     width:10rem;
-    text-align: center;
     height: 6.18rem;
-    border:1px solid red;
-    margin:0 auto;
+    -webkit-transition: opacity .9s linear;
+    -moz-transition: opacity .9s linear;
+    -o-transition: opacity .9s linear;
+    transition: opacity .9s linear;
+    opacity:0;
+    filter: alpha(opacity=0);
+
   }
+  .fadeIn {
+    opacity: 100;
+    filter: alpha(opacity=100);
+  }
+  #bg1 {
+    background: url("../images/adv_0.jpg") no-repeat;
+    background-size: 10rem 6.18rem;
+  }
+  #bg2 {
+    background: url("../images/adv_1.jpg") no-repeat;
+    background-size: 10rem 6.18rem;
+  }
+  #bg3 {
+    background: url("../images/adv_2.jpg") no-repeat;
+    background-size: 10rem 6.18rem;
+  }
+  #bg4 {
+    background: url("../images/adv_3.jpg") no-repeat;
+    background-size: 10rem 6.18rem;
+  }
+  #bg5 {
+    background: url("../images/adv_4.jpg") no-repeat;
+    background-size: 10rem 6.18rem;
+  }
+
+  .pagination {
+    width: auto;
+    display: table;
+    margin: 0 auto
+  }
+  .pagination-panel {
+    width: 100%;
+    position: absolute;
+    bottom: 0.5rem;
+    z-index: 100;
+    height: auto
+  }
+  .pagination li {
+    border-radius: 0.5rem;
+    width:0.5rem;
+    height:0.5rem;
+    background: #fff;
+    float: left;
+    margin-right:0.3rem;
+    list-style-type: none
+  }
+
+  .pagination li.active {
+    background: #52c6d8
+  }
+  .pagination li:last-child {
+    margin-right: 0
+  }
+
+}
+
+.item-section{
+  width:100%;
+
+  overflow: hidden;
   .classification{
     max-width:10rem;
     margin:0 auto;
@@ -41,16 +132,99 @@
     }
   }
   .messagePush{
-    height:30rem;
-    padding:0 0.2rem;
     margin-top:.4rem;
-    .mess_title{
-      border-bottom:1px solid #000;
+    .common_title{
+      margin-top:0.2rem;
+      font-size: .6rem;
+      padding:0 0.2rem;
       padding-bottom:.1rem;
-      font-size: .5rem;
+      .title{
+        border-bottom:1px solid #000;
+        font-weight:bold;
+      }
+    }
+    .openClass{
+
+    }
+    .goodArticle{
+    }
+    .class_list{
+      li{
+        margin-top:0.2rem;
+        img{
+          width:10rem;
+          border:1px solid #e8e8e8;
+        }
+      }
+    }
+    .mess_list{
+      padding:0 0.2rem;
+      ul{
+        padding:0.1rem;
+      }
+      li{
+        border-bottom:1px solid #999;
+        width:100%;
+        display: flex;
+        justify-content:space-between;
+        align-items:center;
+        flex-wrap:wrap;
+        padding:0.12rem 0rem;
+      }
+      .introduction{
+        overflow: hidden;
+        dt{
+          font-size: 0.4rem;
+          padding-top:0.1rem;
+        }
+      }
+      .mess_img{
+        height:1.9351rem;
+        overflow: hidden;
+      }
+      .mess_img img{
+        width:2.9814rem;
+        height:1.9351rem;
+        border:1px solid #e8e8e8;
+      }
+      .attr{
+        width:100%;
+        color:#999999;
+      }
+      .type_0{
+        height:2.6rem;
+        .introduction{
+          width:6rem;
+          height:2rem;
+        }
+        .mess_img{
+          width:2.9814rem;
+        }
+      }
+
+      .type_1{
+        height:4.0rem;
+        .introduction{
+          width:100%;
+          height:1.2rem;
+        }
+        .mess_img{
+          width:10rem;
+          img{
+            margin-left:0.03rem;
+          }
+        }
+      }
+
     }
   }
 }
+
+
+
+
+
+
 
 
 
