--- a/src/public/css/index.scss
+++ b/src/public/css/index.scss
@@ -18,7 +18,14 @@
 //}
 //@include font-dpr(16px);
 
-
+ul,li,dl,dt,dd{
+  list-style: none;
+  -webkit-margin-before: 0px;
+  -webkit-margin-after: 0px;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+  -webkit-padding-start:0px;
+}
 .home_headimg{
   position: relative;
   width:10rem;
@@ -113,7 +120,7 @@ body{
     text-align: center;
     height:1.3rem;
     line-height:1.3rem;
-    width:2.5rem;
+    width:2.42rem;
     overflow: hidden;
     font-size: 0.4rem;
     display:inline-block;
@@ -160,6 +167,9 @@ body{
       overflow: hidden;
 
     }
+
+
+
     li:nth-of-type(1){
       background-color: #00FF99;
     }
@@ -170,6 +180,9 @@ body{
       background-color: #FF9966;
     }
     li:nth-of-type(4){
+      background-color: #CC66CC;
+    }
+    li:nth-of-type(5){
       background-color: #CC66CC;
     }
   }
