--- a/staticpage/css/service.css
+++ b/staticpage/css/service.css
@@ -1,5 +1,7 @@
 #service {
-  background-color: #ddd;
-  height: 100; }
+  background-color: #fff;
+  height: 100%; }
+  #service .freeLisen {
+    padding: 0.2rem; }
 
 /*# sourceMappingURL=service.css.map */
