--- a/staticpage/css/service.scss
+++ b/staticpage/css/service.scss
@@ -1,8 +1,11 @@
 @charset "UTF-8";
 
 #service{
-  background-color: #ddd;
+  background-color: #fff;
   height:100%;
+  .freeLisen{
+    padding:0.2rem;
+  }
 }
 
 
