--- a/staticpage/css/my.scss
+++ b/staticpage/css/my.scss
@@ -16,7 +16,8 @@
       border-radius: 1rem;
       margin:0 auto;
       img{
-        margin-left:-0.8rem;
+        width:2rem;
+        height:2rem;
       }
     }
     h3{
@@ -40,8 +41,11 @@
       height:2rem;
       border:1px solid #999;
       overflow: hidden;
+      font-size: 0.4rem;
+      padding-top:0.58rem;
     }
   }
+
 
   .logout{
     text-align: center;
@@ -49,7 +53,20 @@
       width:3rem;
     }
   }
+  ul.list-group{
+    li.list-group-item{
+      font-size: 0.4rem;
+      padding:0.2rem 0;
+    }
+  }
 }
+
+
+
+
+
+
+
 
 
 
